--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,9 @@
 # combined_config.yaml
-base_path: '/home/mycode2/t0618'
+base_path: '/home/ps/dy/OpenAvatar'
 K: 6
-subject: '00016'
+subject: '00020'
+gpu_id: 0
+xhuman_path: '/home/ps/dy/dataset'
 configs:
   test:
     model_mode: 'edit'
