--- a/config/config00041.yaml
+++ b/config/config00041.yaml
@@ -23,8 +23,14 @@ configs:
     t_mesh_name: 'mesh_pred.ply'
     model_name: 'model_500.ckpt'
   train:
-    image_size: 1024
+    image_size: 800
     pre_num_epochs: 200
-    num_epochs: 1000
+    num_epochs: 500
     lr: 0.005
     t_mesh_name: 't_mesh.ply'
+  fit:
+    image_size: 1024
+    num_epochs: 100
+    lr: 0.001
+    t_mesh_name: 't_mesh.ply'
+    init_model_path: '/home/ps/dy/OpenAvatar/outputs/val_old/00041/save_model/model_500.ckpt'
