--- a/config/config00088.yaml
+++ b/config/config00088.yaml
@@ -7,17 +7,17 @@ xhuman_path: '/home/ps/dy/dataset'
 geometry_model_path: '/home/ps/dy/X-Avatar/outputs/XHumans_smplx/00088_delta'
 configs:
   test:
-    model_mode: 'val'
-    image_size: 800
+    model_mode: 'fit'
+    image_size: 1024
     views:
       - 'front'
     t_mesh_name: 't_mesh.ply'
     pkl_dir: '/home/ps/dy/mycode2/t0717/00088_107'
-    model_name: 'model_500.ckpt'
+    model_name: 'model_50.ckpt'
     need_canonical: True
     save_type: 'mesh'  # 'image' or 'mesh'
   edit:
-    image_size: 800
+    image_size: 1024
     lr: 0.005
     num_epochs: 1000
     t_mesh_name: 'mesh_pred.ply'
@@ -28,3 +28,9 @@ configs:
     num_epochs: 500
     lr: 0.005
     t_mesh_name: 't_mesh.ply'
+  fit:
+    image_size: 1024
+    num_epochs: 50
+    lr: 0.001
+    t_mesh_name: 't_mesh.ply'
+    init_model_path: 'model_500.ckpt'
