--- a/config/config00020.yaml
+++ b/config/config00020.yaml
@@ -7,13 +7,13 @@ xhuman_path: '/home/ps/dy/dataset'
 geometry_model_path: '/home/ps/dy/X-Avatar/outputs/XHumans_smplx/00020_delta'
 configs:
   test:
-    model_mode: 'fit'
+    model_mode: 'edit'
     image_size: 1024
     views:
       - 'front'
     t_mesh_name: 't_mesh.ply'
     pkl_dir: '/home/ps/dy/dataset/00020/test'
-    model_name: 'model_50.ckpt'
+    model_name: 'model_1000.ckpt'
     need_canonical: True
     save_type: 'mesh'  # 'image' or 'mesh'
   edit:
