--- a/geometry/code/config/experiments/Dress_occ_smplx_baseline.yaml
+++ b/geometry/code/config/experiments/Dress_occ_smplx_baseline.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_exp
   
-expname: CHumans_smplx
+expname: Dress_smplx
 load_init: true
 resume: false
 trainer:
@@ -10,14 +10,16 @@ trainer:
 model:
   model_type: smplx
   colornet:
-    train_color: false
-    d_in: 3
+    train_color: true
+    d_in: 6
     d_out: 3
-    multires: 10
+    multires: 4
     depth: 8
     width: 256
     skip_layer: [4]
-    cond_layer: []
+    cond_layer: [0]
+    cond_dim: 528
+    dim_cond_embed: -1
     weight_norm: true
     geometric_init: false
   network:
@@ -30,19 +32,11 @@ model:
     dim_cond_embed: 16
     representation: occ
     softmax_mode: max
-  deltanet:
-    d_in: 54
-    d_out: 3
-    skip_layer: [3]
-    depth: 4
-    width: 256
-    multires: 0
-    geometric_init: false
   deformer:
     network:
       depth: 5
   optim:
     lr: 1e-3
   lambda_vert_normal: 1
-  nepochs_pretrain: 200
+  nepochs_pretrain: 60
   
