--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+numpy==1.22.4
 smplx
 wandb
 trimesh
-opencv-python
-pytorch-lightning==1.3.3
-pytorch3d==0.7.4
+Cython==0.29.20
+chumpy==0.70
+hydra-core==1.3.2
+Rtree==1.0.1
+tqdm
+opencv-python==4.7.0.72
 open3d==0.17.0
 usd-core==22.5
---extra-index-url https://download.pytorch.org/whl/cu117
-torch==1.13.1+cu117 
-torchvision==0.14.1+cu117
-
--f https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-1.11.0_cu113.html
-kaolin==0.13.0
+scikit-image==0.19.3
+PyYAML==5.4.1
+contourpy==1.1.0
+torchmetrics==0.6.0
+fvcore
+iopath
