--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,29 +1,29 @@
 gpu_id: 0
-view_num: 1
 subject: '00122_Inner'
 geometry_path: '/home/ps/data/dy/CtrlAvatar/geometry/outputs/Dress_smplx/00122_Inner'
 data_path: '/home/ps/data/dy/aaaiplus/data'
 source_data_path: '/home/ps/data/dy/dataset/S4d'
+output_path: '/home/ps/data/dy/aaaiplus/outputs'
+
+train:
+  num_epochs: 20
+  batch_size: 1
+  lr: 0.01
+  betas: [0.9, 0.999]
+test:
+  texture_format: 'v_color'
+
+camera:
+  rotating_elevations: [0, 90, 180, 270]
+  random_batch_size: 4
+
+render:
+  iter_res: [2048, 2048]
+
+logging:
+  save_interval: 20
 
 color:
-  n_input_dims: 3
-  n_output_dims: 3
-  encoder:
-    otype: 'HashGrid'
-    n_levels: 16
-    n_features_per_level: 2
-    log2_hashmap_size: 19
-    base_resolution: 16
-    per_level_scale: 1.4472692374403782
-
-  feature_mlp:
-    otype: 'VanillaMLP'
-    activation: 'ReLU'
-    output_activation: 'none'
-    n_neurons: 64
-    n_hidden_layers: 1
-
-normal:
   n_input_dims: 3
   n_output_dims: 3
   encoder:
