--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -6,12 +6,18 @@ source_data_path: '/home/ps/data/dy/dataset/S4d' # This can be the original data
 output_path: './outputs' # The directory where the output files will be saved.
 
 train:
-  num_epochs: 20
+  num_epochs: 200
   batch_size: 1
   lr: 0.01
   betas: [0.9, 0.999]
 test:
   texture_format: 'v_color'
+edit:
+  num_epochs: 500
+  edit_mesh_path: '/home/ps/data/dy/aaaiplus/data/00122_Inner/model0319.obj'
+  lr: 0.01
+  betas: [0.9, 0.999]
+  edit_images_path: './data/${subject}/edit_images'
 
 camera:
   rotating_elevations: [0, 90, 180, 270]
